fixing and improve things
- Created AppEnvConfig to load environment variables using Dotenv.
- Config variables (DB, JWT, Mail) are set via System properties before Spring initialization.
- Added GlobalPreferencesConfig to manage stock and transaction alert thresholds.
- Created EmailService to send alert emails for low stock conditions.
- Integrated alert logic into stock increase/decrease operations with one-time notification control.